# grove

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.ps1  install.sh  tauri.conf.json  test_autolink.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: agents.html  anywhere.html  capabilities.md  extend.html  index.html  install.md  studio.html  workflow.html
docs/css/: grove.css
docs/images/: SHOOTING-GUIDE.md
docs/js/: grove.js
grove-web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
grove-web/public/: manifest.json
grove-web/src/: App.tsx  index.css  main.tsx
grove-web/src/api/: agentUsage.ts  ai.ts  client.ts  config.ts  customAgent.ts  env.ts  git.ts  hmac.ts  hooks.ts  index.ts  projects.ts  review.ts  skills.ts  statistics.ts  studio-factory.ts  taskgroups.ts  tasks.ts  types.ts  version.ts  walkieTalkie.ts
grove-web/src/components/: AuthGate.tsx
grove-web/src/components/AI/: AIPage.tsx  AudioPanel.tsx  GlobalAudioRecorder.tsx  ProvidersPanel.tsx  RecordingIndicator.tsx  index.ts  mock.ts  types.ts  utils.ts
grove-web/src/components/AI/components/: LanguageMultiSelect.tsx  PipelineLayout.tsx  ProfilePicker.tsx  Shared.tsx
grove-web/src/components/Blitz/: BlitzPage.tsx  BlitzTaskListItem.tsx  RadioConnectDialog.tsx  TaskGroupPanel.tsx  useBlitzTasks.ts
grove-web/src/components/Config/: CustomAgentsModal.tsx  LayoutEditor.tsx  SettingsPage.tsx
grove-web/src/components/Dashboard/: ActiveTasksList.tsx  BranchDrawer.tsx  DashboardPage.tsx  GitStatusBar.tsx  QuickStats.tsx  RepoHeader.tsx
grove-web/src/components/Dialogs/: CommitDialog.tsx  ConfirmDialog.tsx  DirtyBranchDialog.tsx  MergeDialog.tsx  NewBranchDialog.tsx  RenameBranchDialog.tsx  index.ts
grove-web/src/components/Layout/: GroveIcon.tsx  GroveWordmark.tsx  LogoBrand.tsx  MobileDrawer.tsx  MobileHeader.tsx  NotificationPopover.tsx  ProjectSelector.tsx  Sidebar.tsx
grove-web/src/components/Projects/: AddProjectDialog.tsx  ProjectCard.tsx  ProjectsPage.tsx
grove-web/src/components/Radio/: ChannelGrid.tsx  GroupSelector.tsx  InfoDisplay.tsx  RadioPage.tsx  TranscriptDialog.tsx  TranscriptPreview.tsx  index.ts
grove-web/src/components/Review/: AgentAvatar.tsx  CommentDetailModal.tsx  ConversationSidebar.tsx  DiffFileView.tsx  DiffReviewPage.tsx  InlineComment.tsx  PreviewCommentHost.tsx  PreviewSearchBar.tsx  diffTheme.css  index.ts  previewRenderers.tsx  syntaxHighlight.ts  useDomSearch.ts
grove-web/src/components/Skills/: AddAgentDialog.tsx  AddSourceDialog.tsx  AgentIcon.tsx  AgentsTab.tsx  ExploreTab.tsx  InstallDialog.tsx  SkillCard.tsx  SkillDetailPanel.tsx  SkillsPage.tsx  SourcesTab.tsx
grove-web/src/components/Stats/: ProjectStatsPage.tsx  TimeRangePicker.tsx
grove-web/src/components/Studio/: ResourcePage.tsx
grove-web/src/components/Studio/SketchPage/: SketchCanvas.tsx  SketchPage.tsx  index.ts
grove-web/src/components/Tasks/: HelpOverlay.tsx  NewTaskDialog.tsx  TasksPage.tsx
grove-web/src/components/Tasks/IDELayout/: IDELayout.types.ts  IDELayoutContainer.tsx  MultiTabTerminalPanel.tsx  ide-layout.css  (+1 more)
grove-web/src/components/Welcome/: WelcomePage.tsx
grove-web/src/components/ui/: AgentIcons.tsx  AgentPicker.tsx  AppPicker.tsx  Button.tsx  Combobox.tsx  ContextMenu.tsx  CustomAgentModal.tsx  DialogShell.tsx  FileConflictDialog.tsx  FileListUtils.ts  FileMentionDropdown.tsx  MarkdownRenderer.tsx  OpenCodeIcon.tsx  ProjectCommandPalette.tsx  TaskCommandPalette.tsx  Tooltip.tsx  UpdateBanner.tsx  filePreview.tsx  index.ts
grove-web/src/context/: CommandPaletteContext.tsx  ConfigContext.tsx  NotificationContext.tsx  PreviewCommentContext.tsx  ProjectContext.tsx  TerminalThemeContext.tsx  ThemeContext.tsx  index.ts  terminalThemes.ts
grove-web/src/data/: mockData.ts  types.ts
grove-web/src/hooks/: index.ts  useAgentQuota.ts  useAudioRecorder.ts  useCommands.ts  useDropdown.ts  useFileMention.ts  useHotkeys.ts  useIsMobile.ts  usePostMergeArchive.ts  useRadioEvents.ts  useTaskGroups.ts  useTaskNavigation.ts  useTaskOperations.ts  useTaskPageState.ts  useWalkieTalkie.ts
grove-web/src/utils/: agentIcon.ts  archiveHelpers.ts  archiveHelpers.tsx  branch.ts  commandPaletteRanking.ts  fileMention.ts  groveMeta.ts  openExternal.ts  pathUtils.ts  projectStyle.ts  taskConvert.ts  taskOperationUtils.ts  tauriDevtools.ts
homebrew-grove/: README.md
homebrew-grove/Formula/: grove.rb
scripts/: bump-version.sh
src/: app.rs  check.rs  dialogs.rs  error.rs  event.rs  fs_link.rs  hooks.rs  main.rs
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src/acp/: adapter.rs  mod.rs
src/agent_graph/: error.rs  inject.rs  mod.rs  tools.rs  user_ops.rs
src/agent_usage/: claude.rs  codex.rs  copilot.rs  gemini.rs  kimi.rs  minimax.rs  mod.rs  opencode.rs  opencode_auth.rs  synthetic.rs  zai.rs
src/api/: auth.rs  error.rs  mod.rs  radio_server.rs  tls.rs
src/api/handlers/: acp.rs  agent_graph_mcp.rs  agent_usage.rs  ai.rs  common.rs  config.rs  custom_agent.rs  env.rs  folder.rs  git.rs  mod.rs  projects.rs  render.rs  skills.rs  statistics.rs  stats.rs  studio_common.rs  taskgroups.rs  tasks.rs  terminal.rs  update.rs  walkie_talkie.rs
src/api/handlers/projects/: crud.rs  project_git.rs  resources.rs  types.rs
src/api/handlers/tasks/: artifacts.rs  crud.rs  file_explorer.rs  git_ops.rs  mod.rs  notes.rs  review.rs  sketch_events.rs  sketch_ws.rs  types.rs
src/cli/: acp.rs  gui.rs  hooks.rs  mcp.rs  mod.rs  web.rs
src/diff/: mod.rs
src/git/: mod.rs
src/model/: loader.rs  workspace.rs  worktree.rs
src/operations/: mod.rs  skills.rs  tasks.rs
src/session/: mod.rs
src/stats/: mod.rs
src/storage/: agent_graph.rs  ai.rs  chat_attachments.rs  chat_history.rs  config.rs  custom_agent.rs  database.rs  mod.rs  sketch_checkpoints.rs  sketches.rs  skills.rs  taskgroups.rs  tasks.rs  workspace.rs
src/ui/components/: branch_selector.rs  confirm_dialog.rs  empty_state.rs  new_task_dialog.rs  tabs.rs  workspace_list.rs  worktree_list.rs
src/update/: mod.rs
src/watcher/: mod.rs
(+32 files in other folders)
