[package]
name = "grove-rs"
version = "0.4.14"
edition = "2021"
description = "A Kanban-style TUI for parallel AI coding. Manage Git worktrees as tasks, run multiple agents in isolated tmux sessions, get notified via hooks."
license = "MIT"
repository = "https://github.com/GarrickZ2/grove"
homepage = "https://github.com/GarrickZ2/grove"
keywords = ["git", "worktree", "tmux", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "docs/images/",
    "docs/index.html",
    "grove-web/",
    "src-tauri/",
    ".github/",
    ".githooks/",
    "CLAUDE.md",
]

[[bin]]
name = "grove"
path = "src/main.rs"

[features]
default = []
gui = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
arboard = "3"
ureq = { version = "2.9", features = ["json"] }
semver = "1.0"
once_cell = "1.19"
serde_json = "1.0"
notify = "6.1"
thiserror = "2.0"

# MCP Server
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Web API Server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
open = "5"

# Terminal WebSocket
portable-pty = "0.8"
futures = "0.3"

# GUI (Tauri) - optional
tauri = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.27.0"
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
]
# Which actions to run on pull requests
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false
