[package]
name = "grove-rs"
version = "0.8.9"
edition = "2021"
description = "A Kanban-style TUI for parallel AI coding. Manage Git worktrees as tasks, run multiple agents in isolated tmux sessions, get notified via hooks."
license = "MIT"
repository = "https://github.com/GarrickZ2/grove"
homepage = "https://github.com/GarrickZ2/grove"
keywords = ["git", "worktree", "tmux", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/build.rs",
    "/install.sh",
    "/package-lock.json",
    "/package.json",
    "/tauri.conf.json",
    "/docs/apple-touch-icon.png",
    "/docs/favicon.png",
    "/docs/favicon.svg",
    "/docs/logo.png",
    "/gen/**",
    "/grove-web/dist/**",
    "!/grove-web/dist/.DS_Store",
    "/scripts/**",
    "/src/**",
    "/src-tauri/**",
]

[[bin]]
name = "grove"
path = "src/main.rs"

[features]
default = []
gui = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
arboard = "3"
ureq = { version = "2.9", features = ["json"] }
semver = "1.0"
once_cell = "1.19"
serde_json = "1.0"
notify = "6.1"
thiserror = "2.0"
glob = "0.3"
globset = "0.4"
walkdir = "2"
rayon = "1.10"
encoding_rs = "0.8.35"

# MCP Server
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Web API Server
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
open = "5"

# Terminal WebSocket
portable-pty = "0.8"
futures = "0.3"

# ACP (Agent Client Protocol)
agent-client-protocol = { version = "0.10", features = ["unstable_session_model"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# GUI (Tauri) - optional
tauri = { version = "2", optional = true , features = [] }
tauri-plugin-shell = { version = "2", optional = true }
rusqlite = { version = "0.34", features = ["bundled"] }
similar = "2.7.0"
getrandom = "0.2"
qrcode = "0.14"

# HMAC-SHA256 auth + TLS
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rcgen = { version = "0.13", features = ["pem"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64 = "0.22"
url = "2"

[target.'cfg(windows)'.dependencies]
junction = "1.2"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.27.0"
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "skip"
# Whether to install an updater program
install-updater = false
